# my-scripts

./: .gitignore  README.md  last_seen_id.txt  macos.setup.sh  perl1line.txt  pyproject.toml
config/: organize-tool.yaml
my-scripts/: duplicate.py
my_scripts/: generate_password.py  notes.py  pic-man.py  wifi_presence.py
scripts/: notes.py  pdf.py  picture-organizer.py  search.py  stocks.py
shell/: search
src/my_scripts/: logger.py  secrets_manager.py  test_dns_server.py
tests/: test_notes.py
