[tool.poetry]
name = "my-scripts"
version = "0.1.0"
description = "Scripts to make my day to day work simpler"
authors = ["Rakesh Singh <kumar.rakesh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
