[project]
name = "my-scripts"
version = "0.1.0"
description = "Scripts to make my day to day work simpler"
authors = [{ name = "Rakesh Singh", email = "kumar.rakesh@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "ldap3>=2.9.1",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tweepy>=4.16.0",
]
[build-system]
# This specifies setuptools as the build backend
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.hatch.build.targets.wheel]
packages = ["src/my_scripts"]
